# cubamm

./: CMakeLists.txt  README.md
include/cubamm/: algorithms.hpp  cubamm.hpp  cuhre_integrate.hpp  integrators.hpp  range.hpp
include/cubamm/integrators/: common.hpp  cuhre.hpp  divonne.hpp  suave.hpp  vegas.hpp
src/: cuhre_integrate.cpp
